--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,33 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".PhrasesActivity"
-            android:label="@string/category_phrases"></activity>
+            android:label="@string/category_phrases"
+            android:parentActivityName=".MainActivity"
+            ><meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity"/>
+        </activity>
         <activity android:name=".ColorsActivity"
-            android:label="@string/category_colors"/>
+            android:parentActivityName=".MainActivity"
+            android:label="@string/category_colors">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity android:name=".FamilyMembersActivity"
-            android:label="@string/category_family"/>
+            android:parentActivityName=".MainActivity"
+            android:label="@string/category_family">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity android:name=".NumbersActivity"
-            android:label="@string/category_numbers"/>
+            android:parentActivityName=".MainActivity"
+            android:label="@string/category_numbers">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
